fix button alignment on blocked page

--- a/src/blocked/blocked.css
+++ b/src/blocked/blocked.css
@@ -29,7 +29,9 @@ h1, p {
 	
 }
 #buttonArea {
-	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 #buttonArea > button{
 	width: 11em;
